--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
     <title>Aravli E Services</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">
+      <form name="contact" netlify netlify-honeypot="bot-field" hidden>
+  <input type="text" name="name" />
+  <input type="email" name="email" />
+  <textarea name="message"></textarea>
+</form>
+    </div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
