--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="root">
       <form name="contact" netlify netlify-honeypot="bot-field" hidden>
   <input type="text" name="name" />
-  <input type="email" name="email" />
+  <input type="number" name="mobile" />
   <textarea name="message"></textarea>
 </form>
     </div>
