--- a/index.html
+++ b/index.html
@@ -9,11 +9,10 @@
   </head>
   <body>
     <div id="root">
-      <form name="contact" netlify netlify-honeypot="bot-field" hidden>
-  <input type="text" name="name" />
-  <input type="number" name="mobile" />
-  <textarea name="message"></textarea>
-</form>
+     <form action="">
+      <label for="mobile">Mobile Number:</label>
+      <input type="number" id="mobile" name="mobile" />
+     </form>
     </div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
